--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,11 @@
     <meta charset="utf-8">
     <title>{{ user.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="{{ "/assets/styles.css" | absolute_url }}" rel="stylesheet" type="text/css">
+    {% if site.style == 'cute' %}
+      <link href="{{ "/assets/cute.css" | absolute_url }}" rel="stylesheet" type="text/css">
+    {% else %}
+      <link href="{{ "/assets/styles.css" | absolute_url }}" rel="stylesheet" type="text/css">
+    {% endif %}
+
   </head>
   <body class="bg-white" {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
